# pdfium-binaries

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Linux.args.gn  PDFiumConfig.cmake  README.md  appveyor.yml  args.gn  build.bat  build.sh  debug.args.gn  mac_create_universal.sh  release.args.gn  shared_library.patch  static_libstdcxx.patch  tag_with_latest.sh  test.bat  test.sh  travis.sh
.github/: lock.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-all.yml  build-one.yml  build-onecore.yml  build-wasm.yml  build.yml  mac-univ.yml  patch.yml  tag.yml  trigger.yml
args/: darwin.args.gn  linux.args.gn  windows.args.gn
conda/: about.json  build.py
conda/recipe/: bld.bat  build.sh  meta.yaml
example/: CMakeLists.txt  example.c
nuget/: Sungaila.PDFium.BlazorWebAssembly.nuspec  Sungaila.PDFium.BlazorWebAssembly.props  bblanchon.PDFium.Android.nuspec  bblanchon.PDFium.Android.targets  bblanchon.PDFium.Binaries.Android.nuspec  bblanchon.PDFium.Binaries.Linux.nuspec  bblanchon.PDFium.Binaries.Win32.nuspec  bblanchon.PDFium.Binaries.iOS.nuspec  bblanchon.PDFium.Binaries.macOS.nuspec  bblanchon.PDFium.Binaries.nuspec  bblanchon.PDFium.Binaries.targets  bblanchon.PDFium.Linux.nuspec  bblanchon.PDFium.Linux.targets  bblanchon.PDFium.MacCatalyst.nuspec  bblanchon.PDFium.WebAssembly.nuspec  bblanchon.PDFium.WebAssembly.props  bblanchon.PDFium.Win32.native.targets  bblanchon.PDFium.Win32.nuspec  bblanchon.PDFium.Win32.targets  bblanchon.PDFium.iOS.nuspec  bblanchon.PDFium.macOS.nuspec  bblanchon.PDFium.macOS.targets  bblanchon.PDFium.native.targets  bblanchon.PDFium.nuspec  bblanchon.PDFium.targets  bblanchon.PDFiumV8.Android.nuspec  bblanchon.PDFiumV8.Linux.nuspec  bblanchon.PDFiumV8.MacCatalyst.nuspec  bblanchon.PDFiumV8.Win32.nuspec  bblanchon.PDFiumV8.iOS.nuspec  bblanchon.PDFiumV8.macOS.nuspec  bblanchon.PDFiumV8.nuspec
patches/: PDFiumConfig.cmake  PDFiumStaticConfig.cmake  aggregate_licenses.sh  clang_rt.patch  collect_licenses.sh  depot_tools.patch  hotfixes.patch  public_headers.patch  rc_compiler.patch  relative-includes.patch  relative_includes.patch  resources.patch  resources.rc  shared_library.patch  static_library.patch  v8_init.patch  widestring.patch
patches/android/: build.patch  pdfium.patch
patches/ios/: build.patch  libjpeg_turbo.patch  pdfium.patch  v8.patch
patches/linux/: build.patch  v8.patch
patches/mac/: build.patch
patches/mips64el/: build.patch
patches/musl/: build.patch  pdfium.patch  toolchain.gn  zlib.patch
patches/ppc64/: build.patch  pdfium.patch
patches/v8/: pdfium.patch
patches/wasm/: build.patch  callbacks.patch  config.gn  data_avail.patch  emscripten.patch  exported_functions.py  partition_allocator.patch  pdfium.patch  skia.patch  toolchain.gn  v8.patch
patches/win/: build.patch  pdfium.patch
steps/: 00-environment.sh  01-install.sh  02-checkout.sh  03-patch.sh  04-install-extras.sh  05-configure.sh  06-build.sh  07-pack.sh  07-stage.sh  08-licenses.sh  08-test.sh  09-pack.sh  09-test.sh  10-pack.sh
