# Disable component build (must be false)
is_component_build = true

# Build PDFium either with or without v8 support (default = true)
pdf_enable_v8 = false

# Build PDFium standalone (default = false)
pdf_is_standalone = true

# Use GCC
is_clang=false
use_cxx11=true

# Static link to c++ library
libcpp_is_static=true
use_custom_libcxx=true
