use_goma = false # Googlers only. Make sure goma is installed and running first.
is_debug = true # Enable debugging features.

pdf_use_skia = false  # Set true to enable experimental skia backend.
pdf_use_skia_paths = false  # Set true to enable experimental skia backend (paths only).

pdf_enable_xfa = false # Set false to remove XFA support (implies JS support).
pdf_enable_v8 = false  # Set false to remove Javascript support.
pdf_is_standalone = true  # Set for a non-embedded build.
is_component_build = false # Disable component build (must be false)

# Build a complete static library
pdf_is_complete_lib = true

clang_use_chrome_plugins = false  # Currently must be false.