import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("x86") {
  toolprefix = "i686-linux-musl-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "x86"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("x64") {
  toolprefix = "x86_64-linux-musl-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "x64"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("arm") {
  toolprefix = "arm-linux-musleabihf-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "arm"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("arm64") {
  toolprefix = "aarch64-linux-musl-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"
  ar = "${toolprefix}ar"
  ld = cxx

  extra_cxxflags= "-flax-vector-conversions"  # issue #150
  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "arm64"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}
