import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("x86") {
  toolprefix = "//third_party/i686-linux-musl-cross/bin/i686-linux-musl-"

  cc = rebase_path("${toolprefix}gcc")
  cxx = rebase_path("${toolprefix}g++")

  readelf = rebase_path("${toolprefix}readelf")
  nm = rebase_path("${toolprefix}nm")
  ar = rebase_path("${toolprefix}ar")
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "x86"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("x64") {
  toolprefix = "//third_party/x86_64-linux-musl-cross/bin/x86_64-linux-musl-"

  cc = rebase_path("${toolprefix}gcc")
  cxx = rebase_path("${toolprefix}g++")

  readelf = rebase_path("${toolprefix}readelf")
  nm = rebase_path("${toolprefix}nm")
  ar = rebase_path("${toolprefix}ar")
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "x64"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("arm") {
  toolprefix = "//third_party/arm-linux-musleabihf-cross/bin/arm-linux-musleabihf-"

  cc = rebase_path("${toolprefix}gcc")
  cxx = rebase_path("${toolprefix}g++")

  readelf = rebase_path("${toolprefix}readelf")
  nm = rebase_path("${toolprefix}nm")
  ar = rebase_path("${toolprefix}ar")
  ld = cxx

  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "arm"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}

gcc_toolchain("arm64") {
  toolprefix = "//third_party/aarch64-linux-musl-cross/bin/aarch64-linux-musl-"

  cc = rebase_path("${toolprefix}gcc")
  cxx = rebase_path("${toolprefix}g++")

  readelf = rebase_path("${toolprefix}readelf")
  nm = rebase_path("${toolprefix}nm")
  ar = rebase_path("${toolprefix}ar")
  ld = cxx

  extra_cxxflags= "-flax-vector-conversions"  # issue #150
  extra_ldflags = "-static-libgcc -static-libstdc++"

  toolchain_args = {
    current_cpu = "arm64"
    current_os = "linux"

    use_remoteexec = false
    is_clang = false
  }
}
