import("//build/toolchain/gcc_toolchain.gni")

gcc_toolchain("emscripten") {
  cc = "emcc"
  cxx = "em++"

  readelf = "llvm-readobj"
  ar = "emar"
  ld = cxx
  nm = "emnm"

  extra_cflags = "-Wno-unknown-warning-option"
  extra_cxxflags = "-Wno-unknown-warning-option"

  toolchain_args = {
    current_cpu = "wasm"
    current_os = "wasm"
  }
}